add member token validator